plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.cineticket'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(18)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot core
    implementation 'org.springframework.boot:spring-boot-starter-web'       // REST APIs
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'  // JPA/Hibernate
    // implementation 'org.springframework.boot:spring-boot-starter-security'  // Security + BCrypt

    // JWT for authentication
implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
implementation 'org.springframework.boot:spring-boot-starter-security'
implementation 'org.springframework.security:spring-security-crypto'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    // Oracle JDBC
    implementation 'com.oracle.database.jdbc:ojdbc8:21.9.0.0'

    // Dev tools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Testing (optional)
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2'
}

// Gradle 8.3 compatible test config
tasks.named('test') {
    useJUnitPlatform()
}
